--- a/css/theme.css
+++ b/css/theme.css
@@ -24,21 +24,27 @@ hr {
   border-width: 3px;
 }
 
-code,
-pre {
-  padding: 0.1em 0.3em;
-
-  border-radius: 3px;
-  background-color: var(--color-code);
-
-  font-size: 90%;
-  font-family: "Source Code Pro",monospace;
+code[class*="language-"] {
+  display: block;
+  overflow-x: auto;
+  padding: 0 24px 0 0;
+  width: 100%;
 }
 
-code[class*="language-"] {
-  width: 100%;
-  overflow-x: auto;
-  display: block;
+pre {
+  padding: 0.6em 0.8em;
+  position: relative;
+}
+
+pre::after {
+  bottom: 0;
+  content: " ";
+  position: absolute;
+  right: 0.8em;
+  top: 0;
+  width: 20px;
+
+  background-image: linear-gradient(to right, rgba(245,242,240,0), var(--color-code));
 }
 
 .wrapper {
